fix: keyword scroll overflow 이슈
overflow hidden을 하면 스크롤이 안되고 overflow-y: scroll을 하면 박스 오른쪽 border 모서리가 없어져서 수정.

--- a/src/components/search/Dropdown.css
+++ b/src/components/search/Dropdown.css
@@ -1,3 +1,8 @@
+.dropdown-list_inner {
+  height: 150px;
+  overflow-y: auto;
+}
+
 .dropdown-list {
   position: absolute;
   width: 100%;
@@ -6,18 +11,18 @@
   border: 1px solid #eee;
   border-radius: var(--base-border-radius);
   background-color: var(--white);
-  overflow-y: scroll;
   list-style: none;
   z-index: 5555;
+  overflow: hidden;
   scrollbar-width: thin;
   scrollbar-color: rgba(0, 0, 0, 0.48);
-  overflow: hidden;
 }
 
 .dropdown-item_container {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  border-radius: var(--base-border-radius);
 }
 
 .dropdown-item {
